--- a/css/style.css
+++ b/css/style.css
@@ -1,129 +1,10 @@
-body {
-  background: #efefef; }
-  body *, body .btn-link {
-    color: #010101; }
-  body .invisivel {
-    display: none; }
-  body .material-icons {
-    vertical-align: middle; }
+.invisivel {
+  display: none; }
 
-header {
-  color: #010101;
-  background: brown; }
-  header .nav-link {
-    color: #343434 !important; }
-  header .active .nav-link {
-    color: white !important; }
-
-.chat {
-  /*.nav-item{
-      border: 1px solid lightgray;
-      border-radius: 10px;
-  }
-  form.dropdown-menu{
-      width: 100%;
-  }
-  fieldset{
-      width: 30%;
-  }
-  legend{
-      text-align: center;
-      background-color: lightblue;
-  }
-  .card{
-      margin: 1em 0;
-  }
-  .card-footer{
-      text-align: center;
-      color: blue;
-  }
-  form.dropdown-menu{
-      text-align: center;
-      label{
-          width: 100%;
-      }
-      input{
-          border: 1px solid lightgray;
-      }
-  }
-  .ctn-anotacoes{
-      margin-bottom: 2em;
-  }
-  .anotacoes{
-      width: 100%;
-      height: 30em;
-      margin: 0 auto;
-  }
-  button{
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      width: 100%;
-      p{
-          margin: 0;
-          flex-grow: 1;
-      }
-  }
-  .material-icons{
-      margin: 0 .5em;
-  }
-  .ctn-copiado{
-      position: fixed;
-      width: 100%;
-      bottom: 2em;
-  }
-  .alert{
-      width: min-content;
-      margin: 0 auto;
-  }
-  
-  .material-icons{
-      vertical-align: middle;
-  }*/ }
-  .chat .ctn-copiado {
-    position: fixed;
-    width: 100%;
-    bottom: 2em; }
-  .chat .alert {
-    width: min-content;
-    margin: 0 auto; }
-  .chat .accordion .card-header .btn-link {
-    width: 100%; }
-  .chat .accordion .card:nth-child(1) .card-body {
-    background: #efefef; }
-  .chat .accordion .card:nth-child(1) .clp-anotacoes textarea, .chat .accordion .card:nth-child(1) .clp-anotacoes button {
-    min-width: 100%; }
-  .chat .accordion .card:nth-child(1) .clp-anotacoes textarea {
-    height: 30em; }
-    .chat .accordion .card:nth-child(1) .clp-anotacoes textarea::-webkit-scrollbar {
-      width: .3em; }
-      .chat .accordion .card:nth-child(1) .clp-anotacoes textarea::-webkit-scrollbar:hover {
-        width: .8em; }
-    .chat .accordion .card:nth-child(1) .clp-anotacoes textarea::-webkit-scrollbar-track {
-      background: brown; }
-    .chat .accordion .card:nth-child(1) .clp-anotacoes textarea::-webkit-scrollbar-thumb {
-      background: #010101;
-      border-radius: 10px 0 0 10px; }
-  .chat .accordion .card:nth-child(1) .clp-anotacoes button {
-    color: brown;
-    border-color: brown; }
-  .chat .accordion .card:nth-child(2) .clp-scripts {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    background: #efefef; }
-    .chat .accordion .card:nth-child(2) .clp-scripts fieldset {
-      width: 29.4em; }
-      @media (max-width: 900px) {
-        .chat .accordion .card:nth-child(2) .clp-scripts fieldset {
-          width: 100%; } }
-    .chat .accordion .card:nth-child(2) .clp-scripts legend {
-      cursor: pointer; }
-    .chat .accordion .card:nth-child(2) .clp-scripts .card {
-      margin: .5em 0;
-      border-radius: 10px; }
-    .chat .accordion .card:nth-child(2) .clp-scripts .card-header {
-      display: flex;
-      flex-direction: column; }
+.navbar {
+  background-color: brown;
+  margin-bottom: 2em; }
+  .navbar a {
+    color: #efefef; }
 
 /*# sourceMappingURL=style.css.map */
